--- a/tab-group-manager/manifest.json
+++ b/tab-group-manager/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Local Tab Group Manager",
-  "version": "2.0",
+  "name": "Tabby",
+  "version": "3.1.2",
   "description": "Organize your tabs into groups and manage them locally.",
   "permissions": ["tabs", "storage"],
   "host_permissions": ["<all_urls>"],
