Add i18n support and localize UI text
Introduces English and French locale files and updates UI elements to use chrome.i18n for text and placeholders. Manifest now specifies a default locale. All user-facing strings in HTML and JS are replaced with localized messages, enabling internationalization for Tabby.

--- a/Tabby/manifest.json
+++ b/Tabby/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 3,
   "name": "Tabby",
   "version": "3.2.1",
+  "default_locale": "en",
   "description": "Organize your tabs into groups and manage them locally.",
   "permissions": ["tabs", "storage"],
   "host_permissions": ["<all_urls>"],
